--- a/Kamu_Medi_Care/Kamu_Medi_Care/Properties/Resources.resx
+++ b/Kamu_Medi_Care/Kamu_Medi_Care/Properties/Resources.resx
@@ -121,4 +121,31 @@
   <data name="images (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\images (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="medicine" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\medicine.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="png-drugs-drugs-medication-pills-treatment-icon-512" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\png-drugs-drugs-medication-pills-treatment-icon-512.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="User_man_male_profile_account_person_people" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\User_man_male_profile_account_person_people.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="User_login_man_profile_account" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\User_login_man_profile_account.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="online_support-512" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\online_support-512.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="contract-icon-26" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\contract-icon-26.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="record" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\record.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="login-logo-web-transparent" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\login-logo-web-transparent.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="signin" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\signin.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
